[package]
name = "excel-converter-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Excel Converter"]
description = "High-performance Excel converter using WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
calamine = "0.24"
rust_xlsxwriter = "0.64"
console_error_panic_hook = { version = "0.1", optional = true }
regex = "1.10"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Blob",
    "Url",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]

[profile.release]
opt-level = "s"
lto = true
