[package]
name = "excel-converter-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Excel Converter"]
description = "High-performance Excel converter using WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# calamine for xlsx parsing
calamine = "0.24"

# regex
regex = "1.10"

# WASM time/random support
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
